crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__opencode__session-lifecycle-recorded.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 11889022086482737301
    source: opencode
    session_id: ses_f45214075ffegqyOJET0P35ZA9
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- SessionEnd:
    agent_id: 11889022086482737301
    as_child: false
