crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__opencode__tool-run.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 4851359853792752577
    source: opencode
    session_id: ses_f45152551ffeLFF7E4TfM1eaRw
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- Identity:
    agent_id: 4851359853792752577
    source: opencode
    session_id: ses_f45152551ffeLFF7E4TfM1eaRw
    cwd: ~
- ActivityStart:
    agent_id: 4851359853792752577
    tool_use_id: call_00_ET_uJL5EdmbdJXb4XHPyxB00703
    detail:
      Generic:
        display: "read: /private/tmp/pixtuoid-capture/proj/NOTE.…"
- Identity:
    agent_id: 4851359853792752577
    source: opencode
    session_id: ses_f45152551ffeLFF7E4TfM1eaRw
    cwd: ~
- ActivityEnd:
    agent_id: 4851359853792752577
    tool_use_id: call_00_ET_uJL5EdmbdJXb4XHPyxB00703
- Identity:
    agent_id: 4851359853792752577
    source: opencode
    session_id: ses_f45152551ffeLFF7E4TfM1eaRw
    cwd: ~
- ActivityStart:
    agent_id: 4851359853792752577
    tool_use_id: call_01_ET_BRzJ2PbW96xy9Zjp4xW25541
    detail:
      Generic:
        display: "read: /private/tmp/pixtuoid-capture/proj"
- Identity:
    agent_id: 4851359853792752577
    source: opencode
    session_id: ses_f45152551ffeLFF7E4TfM1eaRw
    cwd: ~
- ActivityEnd:
    agent_id: 4851359853792752577
    tool_use_id: call_01_ET_BRzJ2PbW96xy9Zjp4xW25541
- Identity:
    agent_id: 4851359853792752577
    source: opencode
    session_id: ses_f45152551ffeLFF7E4TfM1eaRw
    cwd: ~
- ActivityStart:
    agent_id: 4851359853792752577
    tool_use_id: call_00_yuWQgVDKCWwCsizuJVcv9330
    detail:
      Generic:
        display: "read: /private/tmp/pixtuoid-capture/proj/NOTE.…"
- Identity:
    agent_id: 4851359853792752577
    source: opencode
    session_id: ses_f45152551ffeLFF7E4TfM1eaRw
    cwd: ~
- ActivityEnd:
    agent_id: 4851359853792752577
    tool_use_id: call_00_yuWQgVDKCWwCsizuJVcv9330
